# QOP

./: CMakeLists.txt  Convert.cpp  LICENSE  Main.cpp  Parser.cpp  README.md  Trie.cpp  builtins.cpp  builtins.hpp  defines.hpp  function.cpp  function.hpp  input.txt  input1.txt  input2.qop  input2.txt  lexer.cpp  lexer.y  lexer.yy.cpp  lextest.cpp  main1.cpp  main2.cpp  node.cpp  node.hpp  optype.hpp  parser.cpp  parser.hpp  shift.rb  value.cpp  value.hpp
