cmake_minimum_required(VERSION 3.3)
project(QOP)
#include_directories(/usr/local/opt/flex/include)
set(SOURCE_FILES lexer.yy.cpp Main.cpp node.cpp value.cpp builtins.cpp parser.cpp function.cpp function.hpp)
add_executable(QOP ${SOURCE_FILES})
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall -Wextra -O2 -o qop")
